finish product crud
