# src/swagger.yaml
@@ -7,6 +7,9 @@ tags:
   - name: category
     description: Category operations
 
+  - name: product
+    description: Product operations
+
 paths:
   /categories:
     post:
@@ -124,5 +127,144 @@ paths:
           description: Category deleted successfully
         404:
           description: Category not found
+        500:
+          description: Internal server error
+
+  /products:
+    post:
+      summary: Create a new product
+      description: Create a new product with a name, description, price, and category ID.
+      tags:
+        - product
+      consumes:
+        - multipart/form-data
+      parameters:
+        - in: formData
+          name: name
+          type: string
+          maxLength: 20
+          description: The name of the product.
+        - in: formData
+          name: description
+          type: string
+          maxLength: 100
+          description: The description of the product.
+        - in: formData
+          name: price
+          type: number
+          format: double
+          description: The price of the product.
+        - in: formData
+          name: categoryId
+          type: integer
+          format: int64
+          description: The ID of the category.
+        - in: formData
+          name: image
+          type: file
+          format: binary
+          description: The image of the product.
+      responses:
+      201:
+        description: Product created successfully
+      400:
+        description: Bad request
+      500:
+        description: Internal server error
+
+    get:
+      summary: Get a list of products
+      description: Retrieve a list of all products.
+      tags:
+        - product
+      responses:
+        200:
+          description: Successful response
+        500:
+          description: Internal server error
+
+  /products/{id}:
+    get:
+      summary: Get a product
+      description: Retrieve a product by ID.
+      tags:
+        - product
+      parameters:
+        - in: path
+          name: id
+          description: The ID of the product to retrieve.
+          required: true
+          type: integer
+          format: int64
+      responses:
+        200:
+          description: Successful response
+        404:
+          description: Product not found
+        500:
+          description: Internal server error
+
+    put:
+      summary: Update a product
+      description: Update a product by ID.
+      tags:
+        - product
+      parameters:
+        - in: path
+          name: id
+          description: The ID of the product to update.
+          required: true
+          type: integer
+          format: int64
+        - in: body
+          name: product
+          description: Product object
+          required: true
+          schema:
+            type: object
+            properties:
+              name:
+                type: string
+                maxLength: 20
+                description: The name of the product.
+              description:
+                type: string
+                maxLength: 100
+                description: The description of the product.
+              price:
+                type: number
+                format: double
+                description: The price of the product.
+              categoryId:
+                type: integer
+                format: int64
+                description: The ID of the category.
+      responses:
+        200:
+          description: Product updated successfully
+        400:
+          description: Bad request
+        404:
+          description: Product not found
+        500:
+          description: Internal server error
+
+    delete:
+      summary: Delete a product
+      description: Delete a product by ID.
+      tags:
+        - product
+      parameters:
+        - in: path
+          name: id
+          description: The ID of the product to delete.
+          required: true
+          type: integer
+          format: int64
+      responses:
+        200:
+          description: Product deleted successfully
+        404:
+          description: Product not found
         500:
           description: Internal server error
